crispr_chromatin_prediction.ipynb

--- a/crispr_chromatin_prediction.ipynb
+++ b/crispr_chromatin_prediction.ipynb
@@ -271,7 +271,8 @@
       "source": [
         "bw = pyBigWig.open(\"ENCFF093IIW.bw\")\n",
         "\n",
-        "#Проверяем структуру файла: читаем доступность хроматина в указанном участке и выводим список хромосом.\n",
+        "проверяем, как распределён сигнал ATAC-seq в заданном участке и по хромосомам, чтобы убедиться, что файл прочитан корректно и сигнал можно использовать как эпигенетический признак.
+",
         "\n",
         "# сигнал в сайте редактирования (chr1:10000-10500)\n",
         "signal = bw.values(\"chr1\", 10000, 10500)\n",
